fixed issue with turbolinks gem reloading the page when clicking an anchor tag. Removed Menu icon from nav. Added styling to brand logo in navbar so it centers on mobile devices.

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 // Color Variables
-$blue-lighten-1: #42a5f5;  // mainly for href links
+$blue-lighten-1: #42a5f5;
 $highlight-pink: #ff0066;
 
 $grey-lighten-1: #bdbdbd;
@@ -208,4 +208,8 @@ nav.nav-extended .nav-content {
 .col .row {
   margin-left: auto;
   margin-right: auto;
+}
+
+.sidenav li a {
+  color: $blue-lighten-1;
 }
